--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Maham Kanwal | Profolio</title>
     <link rel="stylesheet" href="output.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="images/profolio.png" type="image/x-icon">
     <!-- font-awesome via cdn -->
     <link
       rel="stylesheet"
